--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sarthakagrawal927/slack-clone#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "socket.io": "^4.1.2"
   }
 }
