--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "chat.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon chat"
+    "dev": "nodemon slack"
   },
   "repository": {
     "type": "git",
